# aws-sts

./: .gitignore  Dockerfile  pyproject.toml
app/: server.py
app/config/: settings.py
app/core/: state.py  utils.py
app/handlers/: websocket_handler.py
app/services/: bedrock_service.py  langchain_service.py  polly_service.py  prompt.py  tools.py  transcribe_service.py
